--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -39,11 +39,12 @@ dependencies {
     compile project(path: ':FlycoTabLayout_Lib')
     //百分比布局
     //图片加载神器
-
     //网络框架
     //butterknife框架
+    compile files('libs/zxing.jar')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.facebook.fresco:fresco:0.5.2'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:percent:25.3.1'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
@@ -51,6 +52,7 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.1.2'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.jakewharton:butterknife:8.4.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 }
