--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,9 @@ dependencies {
     //网络框架
     //butterknife框架
     compile files('libs/zxing.jar')
+    // compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.facebook.fresco:fresco:0.5.2'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:percent:25.3.1'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
