--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
     <application
         android:name=".DCZ_application.MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/t1r"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -66,7 +66,8 @@
         <activity android:name=".DCZ_activity.HaveActivity" />
         <activity android:name=".DCZ_activity.ChangePhoneActivity" />
         <activity android:name=".DCZ_activity.SettingPasswordActivity" />
-        <activity android:name=".DCZ_activity.PhoneProveActivity"></activity>
+        <activity android:name=".DCZ_activity.PhoneProveActivity" />
+        <activity android:name=".DCZ_activity.ChangePasswordActivity"></activity>
     </application>
 
 </manifest>
