--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,12 +28,12 @@
     <application
         android:name=".DCZ_application.MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/t1r"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".DCZ_activity.AppStartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -41,6 +41,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".DCZ_activity.WelcomeActivity" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".DCZ_activity.LoginActivity" />
         <activity android:name=".DCZ_activity.EncryptedActivity" />
         <activity android:name=".DCZ_activity.FootprintsActivity" />
@@ -67,7 +68,9 @@
         <activity android:name=".DCZ_activity.ChangePhoneActivity" />
         <activity android:name=".DCZ_activity.SettingPasswordActivity" />
         <activity android:name=".DCZ_activity.PhoneProveActivity" />
-        <activity android:name=".DCZ_activity.ChangePasswordActivity"></activity>
+        <activity android:name=".DCZ_activity.ChangePasswordActivity" />
+        <activity android:name=".DCZ_activity.LoginLockActivity" />
+        <activity android:name=".DCZ_activity.SettingActivity" />
     </application>
 
 </manifest>
